--- a/styles.css
+++ b/styles.css
@@ -64,13 +64,43 @@ main {
     font-size: 1em;
 }
 
+.psswd-icon {
+    background-color: white;
+    border: none;
+    color: black;
+    cursor: pointer;
+}
+
+.psswd-field {
+    display: flex;
+    border-style: solid;
+    border-radius: 0.8em;
+    border-color: black;
+    border-width: 2px;
+}
+
+.psswd-field:focus-within {
+    outline: 2px solid blue;
+}
+
+.field>.psswd-field>input {
+    min-width: auto;
+    border-style: none;
+}
+
+.field>.psswd-field>input:focus {
+    outline: none;
+}
+
+    
+
 .field label,
-.field button,
+.field #update,
 #info>p{
     font-size: 1.2em;
 }
 
-.field button {
+#update {
     min-width: 100%;
     height: 2.5em;
     background-color: black;
@@ -81,7 +111,7 @@ main {
     border: none;
 }
 
-button:focus {
+#update:focus {
     border-style: solid;
     border-color: blue;
 }
