--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ main {
     padding: 1em 1.5em;
     border-radius: 1em;
     flex-grow: 2;
+    order: 2;
 }
 
 #steps p {
@@ -58,11 +59,12 @@ main {
 
 .field input {
     min-width: 100%;
-    height: 2em;
+    height: 2.5em;
     border-radius: 0.8em;
     border-style: solid;
     border-color: black;
     font-size: 1em;
+    padding-right: 0;
 }
 
 .psswd-icon {
@@ -76,6 +78,7 @@ main {
     background-color: white;
     border-style: none;
     cursor: pointer;
+    margin-right: 2px;
 }
 
 .focusable:focus {
@@ -97,6 +100,7 @@ main {
 .field>.psswd-field>input {
     min-width: auto;
     border-style: none;
+    flex-grow: 2;
 }
 
 .field>.psswd-field>input:focus {
@@ -106,11 +110,11 @@ main {
     
 
 .field label,
-.field #update
+button.update {
     font-size: 1.2em;
 }
 
-#update {
+button.update {
     min-width: 100%;
     height: 2.5em;
     background-color: black;
@@ -121,7 +125,7 @@ main {
     border: none;
 }
 
-#update:focus {
+.update:focus {
     border-style: solid;
     border-color: blue;
 }
@@ -129,4 +133,12 @@ main {
 .done {
     text-decoration: line-through;
     color: gray;
+}
+
+#progress-label {
+    order: 1;
+}
+
+#progress-bar {
+    order 0;
 }
