minor css changes

--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,10 @@ main {
 }
 
 #info {
+    padding-top: 1em;
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    gap: 1.5em;
     align-items: center;
 }
 
